--- a/aDVanceERP.Modulos.Inventario/MVP/Vistas/Almacen/VistaTuplaAlmacen.resx
+++ b/aDVanceERP.Modulos.Inventario/MVP/Vistas/Almacen/VistaTuplaAlmacen.resx
@@ -172,4 +172,24 @@
         +fj/0RtrT19UvHTDFgAAAABJRU5ErkJggg==
 </value>
   </data>
+  <data name="resource.HoveredImage2" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAOtJREFUOE/V
+        1DFKA0EUh/EfIlhYCIKFrWAlmMILaLDwAp7CQgvTWXgJizSS1kBSJWBnoZ5BROwsxMLS2CkTplie2ewG
+        YpEP/rDMvPcxw8wOi8YuHvCBz5AXnMeGKp7RwxEOQ07wjWZsKmMdP3mVZdzjIg6WsZGFO3GiwB0u42AZ
+        swjXcIblWFBkFuEm3nEzTVpHuIet/L2NNwyxEurGFIWruEa3IrcYYRBliSi8QrsiSfqVV/mHOlveL8yn
+        7acL38FSqBtTRzj3Q/m3a1OLuf96ifQ49HE8Iaf5cTiITdNo4BGvE/KEVmxYPH4B835If7rl7ysAAAAA
+        SUVORK5CYII=
+</value>
+  </data>
+  <data name="resource.Image2" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAARpJREFUOE/V
+        lL1KxEAQgA8RLCwOBAtbwUrQwhdQsfAFfAoLLbSzyEtY2IitgkIy3wwbUqRQn0FE7CzkCku1UxYuouOe
+        lwOvuA8Gwvx87LKb7XQmijzPV4AboAe8uHgADvzMnwD3wKWqbgNb30NVd4F3M9v0c0lCCHPAR1ylrzUA
+        16p65PNJzGw+CouiWPa1BqAWkcznk4wirKqqC+zXdT3te74YRRhCWACegfOB0pbCNWAxfovIEvAEqJnN
+        +N4fwrIsZ1X1FLgYEkFV3wC875cQOAZOhkSUvsZVel+rLYvIelPvbz9e+LMsy6Z8byvhOA5lPNfG55P8
+        +68X6T8OV8CODxHZi48DsOHnBiIiq8At8JiIO1U99DOTxyfNqnRYb8aYRgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
